<resources>
    <string name="app_name">GlobusApp</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="auth_title">To work with our application please log in</string>
    <string name="register_text">Not registered yet? Create an account</string>
    <string name="registration_title">Registration</string>
    <string name="name_surname_title">Name and Surname</string>
    <string name="confirm_password_title">Confirm your password</string>
    <string name="enter_password_titile">Enter your password</string>
    <string name="enter_e_mail_title">E-mail</string>
    <string name="confirm_registration">Confirm registration</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="feed_page">Feed</string>
    <string name="messages_page">Messages</string>
    <string name="profile_page">Profile</string>
    <string name="globe_page">Globe</string>
    <string name="search_messenger">All</string>
    <string name="hint">This field must be filled</string>
    <string name="password_missmatch">Password mismatch</string>
    <string name="authorization">Authorization</string>
    <string name="action_logout">Logout</string>
    <string name="add_friend">Add friend</string>
    <string name="find_friend">Find friend</string>
    <string name="edit_friend">Edit friend</string>
    <string name="friend_photo">Friend photo</string>
    <string name="friends">Friends</string>
    <string name="activity">Activity</string>
    <string name="statistics">Statistics</string>
    <string name="delete">Delete</string>
    <string name="profile_photo">Profile photo</string>
    <string name="wrong_email_or_password">Incorrect email or password</string>
    <string name="auth_success">Successful authorization</string>
    <string name="name_surname_hint">Enter name and surname</string>
    <string name="you_don_t_have_any_friends_yet_you_can_find_them_by_clicking_on_the_button_above">You don\'t have any friends yet. \nYou can find them by clicking on the button above</string>
    <string name="the_user_has_no_subscriptions_yet">The user has no subscriptions yet.</string>
    <string name="submit">Submit</string>
    <string name="enable_marks">Enable marks</string>
    <string name="retry">Retry</string>
    <string name="error_no_internet_connection">No Internet connection</string>
    <string name="select_an_action">Select an action:</string>
    <string name="delete_marker">Delete marker</string>
    <string name="select_marker">Select marker</string>
    <string name="no_internet_connection_nplease_check_your_connection_nand_refresh_the_page">No internet connection.\nPlease check your connection\nand refresh the page</string>
    <string name="new_marker_added">New marker added</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_username">Invalid username</string>
    <string name="no_server_connection">No server connection</string>
</resources>
