<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/feed"
        android:enabled="true"
        android:title="@string/feed_page"
        android:icon="@drawable/ic_baseline_ballot_24"/>
    <item
        android:id="@+id/messages"
        android:enabled="true"
        android:title="@string/messages_page"
        android:icon="@drawable/ic_baseline_mode_comment_24"/>
    <item
        android:id="@+id/globe"
        android:enabled="true"
        android:title="@string/globe_page"
        android:icon="@drawable/ic_baseline_my_location_24"/>
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:title="@string/profile_page"
        android:icon="@drawable/ic_baseline_account_circle_24"/>
</menu>
