<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_title"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_title"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_background"
            android:inputType="textPassword"
            android:textColor="@color/default_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/confirm_password_title"
        style="@style/Registration.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_password"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_title"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_background"
            android:inputType="textPassword"
            android:textColor="@color/default_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_title"
        style="@style/Registration.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_login" />

    <TextView
        android:id="@+id/e_mail_title"
        style="@style/Registration.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_e_mail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/e_mail_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_mail_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_background"
            android:inputType="textEmailAddress"
            android:textColor="@color/default_text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/name_surname_title"
        style="@style/Registration.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_surname_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registration_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name_surname_hint"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_surname_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_surname_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_background"
            android:inputType="text"
            android:textColor="@color/default_text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/registration_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/registration_title"
        android:textColor="@color/default_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_rect_16"
        android:text="@string/confirm_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_confirm_password" />
</androidx.constraintlayout.widget.ConstraintLayout>