<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/add_friend_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_an_action"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_marker"
        app:layout_constraintBottom_toBottomOf="@+id/select_marker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/select_marker"
        app:layout_constraintTop_toTopOf="@+id/select_marker" />

    <Button
        android:id="@+id/select_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/select_marker"
        app:layout_constraintEnd_toStartOf="@+id/delete_marker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_friend_title" />

</androidx.constraintlayout.widget.ConstraintLayout>